Introduce a delegating persistence layer for decentralised case types, including the new PersistenceStrategyResolver, Feign client, and routing repository so CCD can resolve remote service ownership.